--- a/src/index.html
+++ b/src/index.html
@@ -12,19 +12,23 @@
         <h1>Shopular</h1>
       </header>
       <main ng-controller='ShopController as ShopController'>
+        <button class='btn btn-default'
+          ng-click='ShopController.switchCurrency()'>
+          US / UK
+        </button>
         <table class="table table-striped">
           <thead>
             <tr>
               <td>Name</td>
               <td>Price</td>
               <td>Quantity</td>
-              <td>Color</td>
+              <td>{{ShopController.showColor()}}</td>
             </tr>
           </thead>
           <tbody>
             <tr ng-repeat='item in ShopController.inventory'>
-              <td>{{item.name}}</td>
-              <td>${{ShopController.salePrice(item)}}
+              <td>{{ShopController.showName(item)}}</td>
+              <td>{{ShopController.salePrice(item)}}
                 <img ng-hide='item.discount <= 0'
                 src='https://tiy-learn-content.s3.amazonaws.com/98350f05-sale_2.png'>
               </td>
@@ -33,8 +37,6 @@
             </tr>
           </tbody>
         </table>
-
-
       </main>
       <footer></footer>
     </article>
