--- a/src/index.html
+++ b/src/index.html
@@ -145,10 +145,6 @@
     </article>
 
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js'></script>
-    <script src='js/shop.module.js'></script>
-    <script src='js/shop.controller.js'></script>
-    <script src='js/inventory.service.js'></script>
-    <script src='js/user.controller.js'></script>
-    <script src='js/user.service.js'></script>
+    <script src='js/app.js'></script>
   </body>
 </html>
